GridTemplate: UiIconElement: fix icon alignment

--- a/teamapps-client/less/components/UiGridTemplate.less
+++ b/teamapps-client/less/components/UiGridTemplate.less
@@ -37,6 +37,8 @@
   }
 
   .UiIconElement {
+    background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
   }
 }
